Fix Vercel build: add install command and remove framework override

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
+  "installCommand": "pnpm install",
   "buildCommand": "pnpm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
