--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "installCommand": "corepack enable && pnpm install",
-  "buildCommand": "pnpm run build",
+  "buildCommand": "pnpm exec vite build",
   "outputDirectory": "dist",
   "rewrites": [
     {
