--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": null,
+  "framework": "vite",
   "installCommand": "corepack enable && pnpm install",
-  "buildCommand": "pnpm exec vite build",
-  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
