--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "framework": "vite",
-  "installCommand": "corepack enable && pnpm install",
+  "buildCommand": "pnpm install && pnpm exec vite build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
