--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
